[project]
name = "tmp-xiil1ng8ib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "ariadne-codegen>=0.14.0",
]

[tool.ariadne-codegen]
schema_path = "schema.graphql"
enable_custom_operations = true
